mess with spacing

--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,12 +1,13 @@
 <!-- throwing error for game object on load?  -->
-<div class="row h-100 align-items-center">
+<div class="row h-100 align-items-center justify-content-center">
+
   <div class="col">
   </div>
-  <div class="col-12 text-center bg-light">
-
-    <h1> <%= game.title %>  </h1>
-    <p> <%= game.description %> </p>
-
+  <div class="col-12  bg-light">
+    <div class="game-info  d-block ">
+      <h1> <%= game.title %>  </h1>
+      <p> <%= game.description %> </p>
+    </div>
     <% if(user && game.numberOfPlayers > 0) { %>
 
     <form action="/games/player/<%= game.id %>" method="post">
@@ -37,24 +38,24 @@
       <div class="dropdown-menu player-list dropup" aria-labelledby="dropdownMenuButton">
         <% game.players.forEach(function(player){ %>
 
-             <div class="rating dropdown-item" data-rating= "<%= player.playerUser.playerReviewAverage%>" data-id="<%= player.playerUser.id %>">
-               <a class="dropdown-item" href=#> <img src="<%= player.playerUser.image %>" class="img-fluid rounded-circle" id="google-profile"></img>
+             <div class="rating dropdown-item inline-block" data-rating= "<%= player.playerUser.playerReviewAverage%>" data-id="<%= player.playerUser.id %>">
+               <a class="dropdown-item" href=#> <img src="<%= player.playerUser.image %>" class="img-fluid rounded-circle" ></img>
                   <%= player.playerUser.firstName %>  <%= player.playerUser.lastName %> </a>
+                <div class="inline-block">
 
-                 <div class="stars-outer">
-                 <div class="<%= player.playerUser.id %> stars-inner"></div>
+                   <div class="stars-outer">
+                     <div class="<%= player.playerUser.id %> stars-inner"></div>
+                   </div>
                  </div>
-             </div>
+               </div>
         <% }) %>
       </div>
     </div>
 
 
-
-
-    <div class="h-25 w-25 d-inline-block  mx-auto">
-      <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
-      <p> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %> </p>
+    <div class="d-inline-block float-right">
+      <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile" ></img>
+      <span> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
     </div>
 
   </div>
