--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,13 @@ body {
 
 }
 
+#google-profile {
+  width: 10%;
+  height: 10%;
+  padding: 0;
+  margin: 0;
+}
+
 
 #main-content {
   margin-top
@@ -37,11 +44,7 @@ body {
   height: 2em;
 }
 
-#google-profile {
-  width: 10%;
-  padding: 0;
-  margin: 0;
-}
+
 
 #add-form {
   margin-bottom: 5em;
