add placeholder and logic for host reviews

--- a/views/partials/player_review.ejs
+++ b/views/partials/player_review.ejs
@@ -9,6 +9,7 @@
       <div class="stars-outer">
         <div class="stars-inner"></div>
       </div>
+      <span class="number-rating">3</span>
     </div>
 
 
