--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -30,6 +30,12 @@
   <% } %>
 
 
+
+<% if(user.id) == game.host %>
+  <%- include ../partials/player_review.ejs %>
+<% } %>
+
+
  <!-- fix formating here so everything is on one line also fix width of elements and general look   -->
     <div class="dropdown float-left ml-2">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="playersDropdown" data-toggle="dropdown">
