--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -7,3 +7,7 @@ could do a friends list type thing but maybe wait on that?  -->
 
 <h1> I'm a placeholder </h1>
 <!-- basically make this a public profile page, with the ability to edit it, have it link on the show page!  -->
+<ul>
+  <li> So make player list link here, and then make the host also link here </li> 
+
+</ul>
