--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -11,7 +11,7 @@
     <% if(user && game.numberOfPlayers > 0) { %>
 
     <form action="/games/player/<%= game.id %>" method="post">
-      <input type="submit" value="Join Game" class="btn btn-success float-left m-0">
+      <input type="submit" value="Join Game" class="btn btn-success float-left mt-2">
     </form>
     <% } %>
 
@@ -58,9 +58,9 @@
     </div>
 
 
-    <div class="d-flex float-right ">
+    <div class="d-flex float-right">
       <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
-      <span> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
+      <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
     </div>
 
   </div>
