--- a/views/partials/host_review.ejs
+++ b/views/partials/host_review.ejs
@@ -1,20 +1,29 @@
 <div class="dropdown">
-  <!-- make this into functional dropdown  -->
-  <form action="/games/host_review/<%= game.id %>" method="post">
-    <div class="form-group">
-      <input type="number"  class="form-control" name="hostReviewScore"  min= "1" max="5" placeholder="Rate 1 - 5">
-    </div>
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="hostReviewDropdown" data-toggle="dropdown">
+    Review Host
+  </button>
 
-    <div class="demo">
-      <div class="stars-outer">
-        <div class="stars-inner"></div>
+  <div class="dropdown-menu">
+
+    <div class="dropdown-item">
+      <form action="/games/host_review/<%= game.id %>" method="post">
+        <div class="form-group">
+          <input type="number"  class="form-control" name="hostReviewScore"  min= "1" max="5" placeholder="Rate 1 - 5">
+        </div>
+
+        <div class="demo">
+          <div class="stars-outer">
+            <div class="stars-inner"></div>
+          </div>
+        </div>
+
+
+        <div class="form-group">
+          <label for="hostReviewBody">Host Review: </label>
+          <textarea class="form-control" name="hostReviewBody" placeholder= "Leave feedback for your game master here."> </textarea>
+          <button class="btn btn-danger"> Submit </button>
+        </div>
       </div>
-    </div>
+    </div> 
 
-
-    <div class="form-group">
-      <label for="hostReviewBody">Host Review: </label>
-      <textarea class="form-control" name="hostReviewBody" placeholder= "Leave feedback for your game master here."> </textarea>
-      <button class="btn btn-danger"> Submit </button>
-    </div>
 </div>
