fix button alignment

--- a/views/partials/host_review.ejs
+++ b/views/partials/host_review.ejs
@@ -1,4 +1,4 @@
-<div class="dropdown">
+<div class="dropdown d-inline-block m-2">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="hostReviewDropdown" data-toggle="dropdown">
     Review Host
   </button>
@@ -24,6 +24,6 @@
           <button class="btn btn-danger"> Submit </button>
         </div>
       </div>
-    </div> 
+    </div>
 
 </div>
