--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -7,12 +7,13 @@
     <div class="game-info  d-block">
       <h1> <%= game.title %>  </h1>
       <p> <%= game.description %> </p>
-    </div>
-    <% if(user && game.numberOfPlayers > 0) { %>
 
-    <form action="/games/player/<%= game.id %>" method="post">
-      <input type="submit" value="Join Game" class="btn btn-success float-left mt-2">
+    <% if(user && game.numberOfPlayers > 0) { %>
+    </div>
+    <form action="/games/player/<%= game.id %>"  method="post">
+      <input type="submit" value="Join Game" class="btn btn-success float-left m-2">
     </form>
+
     <% } %>
 
     <!-- need to clean up this view logic/make into a drop down   -->
@@ -20,7 +21,7 @@
 
 
 
-    <% if(user) { %>
+   <% if(user) { %>
       <% game.players.forEach(function(player){
         if(player.playerUser.id == user.id) { %>
                 <%- include ../partials/host_review.ejs %>
@@ -36,7 +37,7 @@
 
 
  <!-- fix formating here so everything is on one line also fix width of elements and general look   -->
-    <div class="dropdown float-left ml-2">
+    <div class="dropdown float-left m-2">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="playersDropdown" data-toggle="dropdown">
         Player List
       </button>
@@ -62,6 +63,7 @@
       <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
       <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
     </div>
+
 
   </div>
   <div class="col">
