--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -59,7 +59,7 @@
     </div>
 
 
-    <div class="d-flex float-right">
+    <div class="d-flex float-left">
       <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
       <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
     </div>
