--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -8,8 +8,15 @@
       <h1> <%= game.title %>  </h1>
       <p> <%= game.description %> </p>
 
-    <% if(user && game.numberOfPlayers > 0) { %>
+      <div class="d-flex">
+        <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
+        <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
+      </div>
+
+
     </div>
+    <% if(user && game.numberOfPlayers > 0) { %>
+
     <form action="/games/player/<%= game.id %>"  method="post">
       <input type="submit" value="Join Game" class="btn btn-success float-left m-2">
     </form>
@@ -24,7 +31,9 @@
    <% if(user) { %>
       <% game.players.forEach(function(player){
         if(player.playerUser.id == user.id) { %>
+          <div class="dropdown d-inline-block  float-left m-2">
                 <%- include ../partials/host_review.ejs %>
+          </div>
         <% } else { %>
         <% } %>
       <% }) %>
@@ -58,11 +67,6 @@
       </div>
     </div>
 
-
-    <div class="d-flex float-left">
-      <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
-      <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
-    </div>
 
 
   </div>
