hopefully fix playerreview router

--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -14,7 +14,8 @@
             <div class="alert alert-success"> <p class="card-text"> Game Full </p>
             </div>
           <% } %>
-            <a href="games/show/<%= game.id %>" class="btn btn-primary">See Details</a>
+            <a href="games/show/<%= game.id %>" class="btn btn-primary"><i class="fas fa-book"></i>
+              See Details</a>
         </div>
       </div>
 
