fix player review form 1.0

--- a/views/partials/host_review.ejs
+++ b/views/partials/host_review.ejs
@@ -23,5 +23,7 @@
           <textarea class="form-control" name="hostReviewBody" placeholder= "Leave feedback for your game master here."> </textarea>
           <button class="btn btn-danger"> Submit </button>
         </div>
+      </form>
+
       </div>
     </div>
