--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -61,7 +61,7 @@
                     <form action="/games/player_review/<%= game.id %>" method="post">
                       <div class="form-group">
                         <input type="hidden" name="player_id" value="<%= player.playerUser.id %>">
-                        <input type="number"  class="form-control" name="hostReviewScore"  min= "1" max="5" placeholder="Rate 1 - 5">
+                        <input type="number"  class="form-control" name="playerReviewScore"  min= "1" max="5" placeholder="Rate 1 - 5">
                       </div>
 
 
@@ -70,7 +70,9 @@
                         <label for="playerReviewBody">Player Review: </label>
                         <textarea class="form-control" name="playerReviewBody" placeholder= "Leave feedback for your players here."> </textarea>
                         <button class="btn btn-danger"> Submit </button>
+
                       </div>
+                    </form>
                     </div>
                    <div class="stars-outer d-inline-block">
                      <div class="<%= player.playerUser.id %> stars-inner"></div>
