--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -27,8 +27,13 @@
   </div>
 
   <div class="form-group">
+      <label for="date" class="col-form-label"> Date </label>
+      <input type="date" class="form-control form-control-sm" name="date">
+  </div>
+
+  <div class="form-group">
       <label for="startTime" class="col-form-label"> Start Time </label>
-      <input type="text" class="form-control form-control-sm" name="startTime">
+      <input type="time" class="form-control form-control-sm" name="startTime">
   </div>
 
   <div class="form-group">
