--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -4,11 +4,10 @@ player rating
 Game master rating
 location, image etc.
 could do a friends list type thing but maybe wait on that?  -->
-
-<h1> I'm a placeholder </h1>
+<h1> <%= user.firstName %> | <%= user.lastName %>'s  Public Profile </h1> 
 <!-- basically make this a public profile page, with the ability to edit it, have it link on the show page!  -->
 <ul>
   <li> So make player list link here, and then make the host also link here </li>
-  <li> This is the place for public information and what not. </li> 
+  <li> This is the place for public information and what not. </li>
 
 </ul>
