--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,7 +1,7 @@
 <div class="row h-100">
   <div class="col">
   </div>
-  <div class="col-12  bg-secondary profile">
+  <div class="col-12   profile">
     <!-- change bg color  -->
 
     <h1> <%= user.firstName %> | <%= user.lastName %>'s  Public Profile </h1>
