--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -9,8 +9,11 @@
       <p> <%= game.description %> </p>
 
       <div class="d-flex">
-        <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
-         <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
+          <img src="<%= game.host.image %>" class="img-fluid rounded-circle float-left" id="google-profile"></img>
+            <a href= "/users/profile/<%= game.host.id %>" class="plain-link">
+           <span class="align-middle"> Hosted by <%= game.host.firstName %>  <%= game.host.lastName %></span>
+            </a> 
+        </a>
       </div>
 
 
@@ -54,7 +57,7 @@
         <% game.players.forEach(function(player){ %>
 
 
-               <a href="/users/profile/<%= player.playerUser.id %>" class="player-list"> <img src="<%= player.playerUser.image %>" class="img-fluid rounded-circle" ></img>
+               <a href="/users/profile/<%= player.playerUser.id %>" class="player-list plain-link"> <img src="<%= player.playerUser.image %>" class="img-fluid rounded-circle" ></img>
                   <%= player.playerUser.firstName %>  <%= player.playerUser.lastName %>
                   <div class="rating dropdown-item d-flex" data-rating= "<%= player.playerUser.playerReviewAverage%>" data-id="<%= player.playerUser.id %>">
                   </div>
