--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -8,5 +8,8 @@
     <li class="nav-item">
       <a class="nav-link" href="/users/played" id="played-tab" role="tab">Played Games</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/users/profile/<%= user.id %>" id="played-tab" role="tab">Profile</a>
+    </li>
 
   </ul>
