start profile edit feature

--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -1,15 +1,15 @@
 
     <ul class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link tab" href="/users/dashboard" id="dashboard-tab"  role="tab"> Dashboard </a>
-    <li class="nav-item">
-      <a class="nav-link tab" id="hosted-tab"  href="/users/hosted"  role="tab">Hosted Games</a>
+    <li class="nav-item tab">
+      <a class="nav-link " href="/users/dashboard" id="dashboard-tab"  role="tab"> Dashboard </a>
+    <li class="nav-item tab">
+      <a class="nav-link" id="hosted-tab"  href="/users/hosted"  role="tab">Hosted Games</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link tab" href="/users/played" id="played-tab"  role="tab">Played Games</a>
+    <li class="nav-item tab">
+      <a class="nav-link " href="/users/played" id="played-tab"  role="tab">Played Games</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link tab" href="/users/profile/<%= user.id %>" id="profile-tab"  role="tab">Profile</a>
+    <li class="nav-item tab">
+      <a class="nav-link " href="/users/profile/<%= user.id %>" id="profile-tab"  role="tab">Profile</a>
     </li>
 
   </ul>
