add first pass edit route and placeholder view

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -37,9 +37,9 @@
 
       <% if(user.id == profileUser.id) { %>
 
-        <button class="btn btn-danger"> Edit </button>
+        <a href="/users/profile/edit/<%= user.id %>" class="btn btn-danger"> Edit </a>
 
-      <% } %> 
+      <% } %>
 
 
   <div class="col">
