fix form, mess with user model

--- a/views/users/profile_edit.ejs
+++ b/views/users/profile_edit.ejs
@@ -2,9 +2,10 @@
 
 
 <form action="/users/profile_edit/<%= user.id %>" method="post">
+
   <div class="form-group">
-    <label for="profileDescription">
-    <textarea class="form-control" name="profileDescription" placeholder="Tell us a little about yourself..">
+    <label for="profileDescription">Profile Info:</label>
+    <textarea class="form-control" name="profileDescription" placeholder="Tell us a little about yourself...">
     </textarea>
   </div>
       <button class="btn btn-danger">Submit Changes</button>
