--- a/views/users/profile_edit.ejs
+++ b/views/users/profile_edit.ejs
@@ -1,7 +1,8 @@
 <h1> This is the edit page </h1>
 
 
-<form action="/users/profile_edit/<%= user.id %>" method="post">
+<form action="/users/profile_edit/<%= user.id %>?_method=PUT" method="post">
+      <input type="hidden" name="_method" value="PUT">
 
   <div class="form-group">
     <label for="profileDescription">Profile Info:</label>
