break put routes with method override

--- a/views/users/profile_edit.ejs
+++ b/views/users/profile_edit.ejs
@@ -1,8 +1,8 @@
 <h1> This is the edit page </h1>
 
 
-<form action="/users/profile_edit/<%= user.id %>?_method=PUT" method="post">
-      <input type="hidden" name="_method" value="PUT">
+<form action="/users/profile/edit/<%= user.id %>?_method=PUT" method="post">
+  <input type="hidden" name="_method" value="PUT">
 
   <div class="form-group">
     <label for="profileDescription">Profile Info:</label>
