flesh out edit feature and user model

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -11,7 +11,7 @@
 
     <h1> <%= profileUser.firstName %> | <%= profileUser.lastName %>'s  Public Profile </h1>
     <p> put an image up in the header that hopefully doesn't look terrible </p>
-
+    <p> <%= profileUser.profileInfo %> </p> 
 
     <div class="rating" data-rating= "<%= user.hostReviewAverage%>" data-id="<%= profileUser.id %>">
       <span class> Host Rating: <%= profileUser.hostReviewAverage%> </span>
@@ -29,7 +29,7 @@
 
     <ul>
       <li> So make player list link here, and then make the host also link here </li>
-      <li> This is the place text-centertion and what not. </li>
+
 
     </ul>
 
