--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -16,6 +16,7 @@
             <button type="submit" class="btn btn-danger"><i class= "fas fa-trash"></i>
               Delete </button>
           </form>
+          <a href="/games/edit/<%= game.id%>" class="btn btn-danger"> Edit Game </a>
         <% } else { %>
           <form action="/users/drop_player/?_method=DELETE" method="post" id="delete-form">
             <input type="hidden" name="_method" value="DELETE">
