--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -1,4 +1,21 @@
-<h1> Games Edit Page </h1>
-<p> put add form partial here </p>
-<p> make it populate fields with old values if possible </p>
-<p>  maybe change button values as well? </p> 
+<div class="row h-100 align-items-center">
+  <div class="col">
+  </div>
+  <div class="col-8 bg-light" id="add-form">
+
+    <% if(errors.length > 0) {%>
+      <% errors.forEach(function(error){ %>
+         <div class= "alert alert-danger"> <%= error.text %> </div>
+      <% }) %>
+    <% } else { %>
+
+    <% } %>
+
+    <%- include ../partials/edit_form.ejs %>
+
+  </div>
+
+  <div class="col">
+  </div>
+
+</div>
