--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -9,19 +9,19 @@
         <p class="card-text"><%= game.description %> </p>
         <p class="card-text"> Seeking <%= game.numberOfPlayers %>
           players </p>
-        <a href="/games/show/<%= game.id %>" class="btn btn-primary mb-2"><i class="fas fa-book"></i> Details</a>
+        <a href="/games/show/<%= game.id %>" class="btn btn-primary m-2"><i class="fas fa-book"></i> Details</a>
         <% if (game.host == user.id) { %>
           <form action="/games/<%= game.id %>/?_method=DELETE" method="post" id="delete-form">
             <input type="hidden" name="_method" value="DELETE">
-            <button type="submit" class="btn btn-danger"><i class= "fas fa-trash"></i>
+            <button type="submit" class="btn btn-danger m-2"><i class= "fas fa-trash"></i>
               Delete </button>
           </form>
-          <a href="/games/edit/<%= game.id%>" class="btn btn-danger"> Edit Game </a>
+          <a href="/games/edit/<%= game.id%>" class="btn btn-danger m-2"> Edit Game </a>
         <% } else { %>
           <form action="/users/drop_player/?_method=DELETE" method="post" id="delete-form">
             <input type="hidden" name="_method" value="DELETE">
             <input type="hidden" name="game_id" value="<%= game.id %>">
-            <button type="submit" class="btn btn-danger"><i class= "fas fa-trash"></i>
+            <button type="submit" class="btn btn-danger m-2"><i class= "fas fa-trash"></i>
               Leave Game </button>
           </form>
 
