update packages, work on add form

--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -14,7 +14,7 @@
 
   <div class="form-group">
       <label for="zip" class= "col-form-label">ZIP</label>
-      <input type="text" class="form-control form-control-sm" name="zip">
+      <input type="text" class="form-control form-control-sm" name="zip" pattern="[0-9]{5}" title="Five digit zip">
   </div>
 
 
