--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
       </li>
       <% } %>
       <li class="nav-item">
-        <a class="nav-link" href="/"><i class="fa fa-home"></i> Home </a>
+        <a class="nav-link" href="/" id="highlight"><i class="fa fa-home"></i> Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/games/add"><i class="fas fa-user-plus"></i> Host A Game </a>
