--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,17 +1,24 @@
 <div class="row h-100">
   <div class="col">
   </div>
-  <div class="col-12   profile">
-
+  <div class="col-12">
     <% if(user.id == profileUser.id) { %>
       <%- include ../partials/dashboard_nav.ejs %>
     <% } %>
 
     <!-- change bg color  -->
 
-    <h1> <%= profileUser.firstName %> | <%= profileUser.lastName %>'s  Public Profile </h1>
-    <p> put an image up in the header that hopefully doesn't look terrible </p>
-    <p> <%= profileUser.profileInfo %> </p> 
+    <div class="profile-image float-left">
+        <img src="<%= profileUser.image %>" class="img-fluid rounded-circle" ></img>
+    </div>
+
+    <div class="profile-header float-left">
+      <h1> <%= profileUser.firstName %> | <%= profileUser.lastName %>'s  Public Profile </h1>
+    </div>
+
+    <div class="clearfix">
+      <p> <%= profileUser.profileInfo %> </p>
+    </div>
 
     <div class="rating" data-rating= "<%= user.hostReviewAverage%>" data-id="<%= profileUser.id %>">
       <span class> Host Rating: <%= profileUser.hostReviewAverage%> </span>
@@ -33,7 +40,7 @@
 
     </ul>
 
-  </div>
+
 
       <% if(user.id == profileUser.id) { %>
 
@@ -41,6 +48,7 @@
 
       <% } %>
 
+    </div>
 
   <div class="col">
   </div>
