fix profile page looks

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -17,6 +17,9 @@
     </div>
 
     <div class="clearfix">
+    </div>
+
+    <div class="profile-info">
       <p> <%= profileUser.profileInfo %> </p>
     </div>
 
