--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -6,7 +6,7 @@
     <div class="card card-inline">
       <div class="card-body">
         <h5 class="card-title"><%= game.title %> </h5>
-        <p class="card-text"><%= game.description %> </p>
+        <p class="card-text"><%= truncate(game.description, 250) %> </p>
         <p class="card-text"> Seeking <%= game.numberOfPlayers %>
           players </p>
         <a href="/games/show/<%= game.id %>" class="btn btn-primary m-2"><i class="fas fa-book"></i> Details</a>
