--- a/views/partials/edit_form.ejs
+++ b/views/partials/edit_form.ejs
@@ -5,45 +5,45 @@
 
   <div class="form-group">
     <label for="title">Title</label>
-    <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title">
+    <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title" value="<%= game.title %>">
   </div>
 
   <div class="form-group">
       <label for="address" class="col-form-label">Address</label>
-      <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
+      <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address" value="<%= game.address%>">
   </div>
 
   <div class="form-group">
       <label for="zip" class= "col-form-label">ZIP</label>
-      <input type="text" class="form-control form-control-sm" name="zip">
+      <input type="text" class="form-control form-control-sm" name="zip" vaule="<%= game.zip %>">
   </div>
 
 
   <div class="form-group">
     <label for="locationType"> Location Type </label>
-        <select class="custom-select d-inline-block" id="locationType" name="locationType">
-          <option value="novice">Buisness</option>
-          <option value="experienced">Home</option>
+        <select class="custom-select d-inline-block" id="locationType" name="locationType" value="<%= game.locationType %>">
+          <option value="buisness">Buisness</option>
+          <option value="home">Home</option>
         </select>
   </div>
 
   <div class="form-group">
       <label for="date" class="col-form-label"> Date </label>
-      <input type="date" class="form-control form-control-sm" name="date">
+      <input type="date" class="form-control form-control-sm" name="date" value="<%= game.date %>">
   </div>
 
   <div class="form-group">
       <label for="startTime" class="col-form-label"> Start Time </label>
-      <input type="time" class="form-control form-control-sm" name="startTime">
+      <input type="time" class="form-control form-control-sm" name="startTime" value="<%= game.startTime %>">
   </div>
 
   <div class="form-group">
     <label for="number">Number of Players</label>
-    <input type="number" min="1" max="10" class="form-control" name="number">
+    <input type="number" min="1" max="10" class="form-control" name="number" value="<%= game.numberOfPlayers %>">
   </div>
 
     <div class="form-group">
-      <select class="custom-select form-control" id="experience" name="experience">
+      <select class="custom-select form-control" id="experience" name="experience" value="<%= game.experience %>">
         <option selected>Choose Experience Level</option>
         <option value="novice">Novice</option>
         <option value="experienced">Experienced</option>
@@ -53,7 +53,7 @@
 
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea class="form-control"  name="description"> </textarea>
+    <textarea class="form-control"  name="description"> <%= game.description %> </textarea>
   </div>
 
 
