--- a/views/partials/edit_form.ejs
+++ b/views/partials/edit_form.ejs
@@ -15,7 +15,7 @@
 
   <div class="form-group">
       <label for="zip" class= "col-form-label">ZIP</label>
-      <input type="text" class="form-control form-control-sm" name="zip" vaule="<%= game.zip %>">
+      <input type="text" class="form-control form-control-sm" name="zip" value="<%= game.zip %>"  pattern="[0-9]{5}" title="Five digit zip">
   </div>
 
 
