--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -1,26 +1,40 @@
 
 <div class="row">
+  <div class="col-12">
 
-  <% games.forEach(function(game){ %>
-    <div class="col-12">
-      <div class="card card-inline">
-        <div class="card-body">
-          <h5 class="card-title"><%= game.title %> </h5>
-          <p class="card-text float-right"> Game Starts At: <%= dateFormat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </p>
-          <p class="card-text"><%= truncate(game.description, 250) %> </p>
-          <% if (game.numberOfPlayers > 0) { %>
-          <p class="card-text"> Seeking <%= game.numberOfPlayers %>
-          <%= makePlural('Player', Number(game.numberOfPlayers)) %></p>
-          <% } else { %>
-            <div class="alert alert-success"> <p class="card-text"> Game Full </p>
+    <% if(games == null) { %>
+
+      <% games.forEach(function(game){ %>
+
+          <div class="card card-inline">
+            <div class="card-body">
+              <h5 class="card-title"><%= game.title %> </h5>
+              <p class="card-text float-right"> Game Starts At: <%= dateFormat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </p>
+              <p class="card-text"><%= truncate(game.description, 250) %> </p>
+              <% if (game.numberOfPlayers > 0) { %>
+              <p class="card-text"> Seeking <%= game.numberOfPlayers %>
+              <%= makePlural('Player', Number(game.numberOfPlayers)) %></p>
+              <% } else { %>
+                <div class="alert alert-success"> <p class="card-text"> Game Full </p>
+                </div>
+              <% } %>
+                <a href="games/show/<%= game.id %>" class="btn btn-primary"><i class="fas fa-book"></i>
+                  See Details</a>
             </div>
-          <% } %>
-            <a href="games/show/<%= game.id %>" class="btn btn-primary"><i class="fas fa-book"></i>
-              See Details</a>
-        </div>
-      </div>
+          </div>
 
-    </div>
-  <% }) %>
 
+        <% }) %>
+      <% } else { %>
+         <div class="card card-inline">
+           <div class="card-body">
+             <h5 class="card-title"> No Games Added Yet! </h5>
+             <p class="card-text">Add some games to see games listed here instead of this dumb message </p>
+             <a href="games/add" class="btn btn-primary"><i class="fas fa-plus"></i>
+               Add New Game</a>
+           </div>
+         </div>
+      <% } %>
+
+  </div>
 </div>
