--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-rating-input/0.4.0/bootstrap-rating-input.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="/javascript/script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGdCjLNhY1u1ZQhXOHhVgTewhOyj71OuU&callback=initMap"
+   async defer></script>
+   <script src="/javascript/script.js"></script>
 
   </body>
 </html>
