--- a/views/partials/dashboard_nav.ejs
+++ b/views/partials/dashboard_nav.ejs
@@ -1,5 +1,5 @@
-
-    <ul class="nav nav-tabs" role="tablist">
+<div class="dashboard-nav mb-3">
+  <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item">
       <a class="nav-link tab" href="/users/dashboard" id="dashboard-tab"  role="tab"> Dashboard </a>
     <li class="nav-item">
@@ -13,3 +13,4 @@
     </li>
 
   </ul>
+</div>
