--- a/views/users/profile_edit.ejs
+++ b/views/users/profile_edit.ejs
@@ -7,6 +7,7 @@
   <div class="form-group">
     <label for="profileDescription">Profile Info:</label>
     <textarea class="form-control" name="profileDescription" placeholder="Tell us a little about yourself...">
+      <%= user.profileInfo %> 
     </textarea>
   </div>
       <button class="btn btn-danger">Submit Changes</button>
