--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -52,7 +52,7 @@
 
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea class="form-control"  name="description"> </textarea>
+    <textarea class="form-control"  name="description" placeholder="Tell us about the game..."> </textarea>
   </div>
 
 
