--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -23,7 +23,7 @@
       <p> <%= profileUser.profileInfo %> </p>
     </div>
 
-    <div class="rating" data-rating= "<%= user.hostReviewAverage%>" data-id="<%= profileUser.id %>">
+    <div class="rating" data-rating= "<%= profileUser.hostReviewAverage%>" data-id="<%= profileUser.id %>">
       <span class> Host Rating: <%= profileUser.hostReviewAverage%> </span>
         <div class="stars-outer">
         <div class="<%= profileUser.id %> stars-inner"></div>
