--- a/views/index/google_map_test.ejs
+++ b/views/index/google_map_test.ejs
@@ -2,3 +2,8 @@
 
 <div id="map">
 </div>
+
+<div id="map-search float-left">
+  <input type="search" id="map-search" placeholder="Find a Game..">
+  <button class="btn btn-primary"> Search </button>
+</div>
