--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -4,17 +4,17 @@
 
   <div class="form-group">
     <label for="title">Title</label>
-    <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title">
+    <input type="text" class="form-control form-control-sm" name="title" aria-describedby="title" placeholder="Enter Title" required>
   </div>
 
   <div class="form-group">
       <label for="address" class="col-form-label">Address</label>
-      <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address">
+      <input type="text" class="form-control form-control-sm" name="address"  placeholder="Enter Address" required>
   </div>
 
   <div class="form-group">
       <label for="zip" class= "col-form-label">ZIP</label>
-      <input type="text" class="form-control form-control-sm" name="zip" pattern="[0-9]{5}" title="Five digit zip">
+      <input type="text" class="form-control form-control-sm" name="zip" pattern="[0-9]{5}" title="Five digit zip" required>
   </div>
 
 
@@ -28,12 +28,12 @@
 
   <div class="form-group">
       <label for="date" class="col-form-label"> Date </label>
-      <input type="date" class="form-control form-control-sm" name="date">
+      <input type="date" class="form-control form-control-sm" name="date" required>
   </div>
 
   <div class="form-group">
       <label for="startTime" class="col-form-label"> Start Time </label>
-      <input type="time" class="form-control form-control-sm" name="startTime">
+      <input type="time" class="form-control form-control-sm" name="startTime" required>
   </div>
 
   <div class="form-group">
