--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -4,9 +4,20 @@
 
     <% if(games == null) { %>
 
+         <div class="card card-inline">
+           <div class="card-body">
+             <h5 class="card-title"> No Games Added Yet! </h5>
+             <p class="card-text">Add some games to see games listed here instead of this dumb message </p>
+             <a href="games/add" class="btn btn-primary"><i class="fas fa-plus"></i>
+               Add New Game</a>
+           </div>
+         </div>
+
+    <% } else { %>
+
       <% games.forEach(function(game){ %>
 
-          <div class="card card-inline">
+          <div class="card card-inline border-2 border-secondary">
             <div class="card-body">
               <h5 class="card-title"><%= game.title %> </h5>
               <p class="card-text float-right"> Game Starts At: <%= dateFormat(game.date, "fullDate") %> | <%= timeChange(game.startTime) %> </p>
@@ -25,16 +36,9 @@
 
 
         <% }) %>
-      <% } else { %>
-         <div class="card card-inline">
-           <div class="card-body">
-             <h5 class="card-title"> No Games Added Yet! </h5>
-             <p class="card-text">Add some games to see games listed here instead of this dumb message </p>
-             <a href="games/add" class="btn btn-primary"><i class="fas fa-plus"></i>
-               Add New Game</a>
-           </div>
-         </div>
-      <% } %>
+
+    <% } %>
+
 
   </div>
 </div>
