--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -56,6 +56,6 @@
   </div>
 
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary m-2">Submit</button>
 
 </form>
